# uglyData

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.prod  README.md  app.py  docker-compose.yml  pyproject.toml
docs/: changelog.md  conf.py  index.md
docs/_static/: custom.css
docs/dev/: dev.md  index.md  testing.md
docs/getting_started/: deployment.md  index.md  installation.md
docs/modules/: modules.rst  uglyData.api.routers.rst  uglyData.api.rst  uglyData.db.rst  uglyData.ingestor.rst  uglyData.rst  uglyData.scraping.clients.rst  uglyData.scraping.rst  uglyData.scraping.scrapers.rst
docs/project_structure/: index.md
tests/: conftest.py  test_builders.py  test_db.py  test_ingestor.py  test_service.py
tests/api/: test_app.py
tests/api/routers/: test_columns.py  test_drivers.py  test_ecoreleases.py  test_events.py  test_exchanges.py  test_families.py  test_instruments.py  test_market.py  test_products.py  test_spreads.py  test_subfamilies.py  test_users.py  utils.py
uglyData/: __init__.py  cli.py  log.py  utils.py
uglyData/api/: auth.py  builders.py  dependencies.py  exceptions.py  models.py  service.py  traces.py  wsockets.py
uglyData/api/routers/: audit_trail.py  bonds.py  columns.py  custom_indices.py  drivers.py  ecoreleases.py  events.py  exchanges.py  families.py  instruments.py  log.py  market.py  minio.py  products.py  realtime.py  spreads.py  subfamilies.py  tags.py  users.py
uglyData/db/: __init__.py  _select.py  cleaning.py  elastic.py  postgres.py
uglyData/db/scripts/: 00backfill.sql  01base.sql
uglyData/ingestor/: __init__.py  timescale.py  tslib.py
