[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uglyData"
version = "0.1.0"
description = "Python package to extract and handle data from an API or a S3 bucket."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Arfima", email = "dev@arfima.com" }]
dependencies = [
    "elasticsearch>=8.7.0",
    "nest_asyncio",
    "orjson>=3.8.11",
    "protobuf",
    "psycopg[binary,pool]",
    "pyarrow>=12.0.0",
    "pycountry",
    "python_dateutil>=2.8.2",
    "PyYAML>=6.0",
    "websockets>=11.0.3",
    "aiohttp>=3.8.5",
    "async_lru>=2.0.2",
    "ecs-logging>=2.0.0",
    "elastic-apm>=6.15.1",
    "fastapi_pagination>=0.12.2",
    "fastapi>=0.103.0",
    "pydantic >= 2.3.0",
    "uvicorn[standard]>=0.22.0",
    "s3fs>=2025.9.0",
    "typer>=0.17.4",
]

[tool.hatch.build.targets.wheel]
packages = ["uglyData"]

[project.scripts]
uglydata_api = "uglyData.cli:cli"

[tool.hatch.build]
skip-excluded-dirs = true
only-packages = true
sources = ["."]
hooks.vcs.version-file = "uglyData/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
extend-fixable = [
    # Instead of trailing-whitespace
    "W291",
    "W293",
]

extend-select = [
    # Instead of pydocstyle
    "D",
    #Instead of flake8
    "E",
    "F",
    "B",
    # Instead of pep8-naming
    "N",
    # Instead of flake8-debugger or debug-statements
    "T10",
]

ignore = [
    "E203",
    "E501",
    # Avoid incompatible rules
    "D203",
    "D213",
    # We are using a docstyle format closer to google than to numpy
    "D407",
    # We use Pascal
    "N999",
]

[tool.ruff.lint.extend-per-file-ignores]
# Ignore `D` rules everywhere except for the `src/` directory.
"!uglyData/**.py" = ["D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
